<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
android:layout_height="match_parent">
    <Toolbar android:layout_width="match_parent" android:layout_height="wrap_content"
             android:background="@drawable/tb_bg"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:title="@string/app_name"
             android:titleTextColor="@color/white"
             android:id="@+id/tb1"
    />

    <TextView android:id="@+id/tv1" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:text="@string/app_name"
              android:textSize="35sp"

              android:fontFamily="@font/mp_boldextra" android:layout_below="@id/tb1"/>
    <TextView android:id="@+id/tv2" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:text="@string/lead_developer"
              android:textSize="35sp"
              android:textColor="@color/black"
              android:fontFamily="@font/mp_boldextra" android:layout_below="@id/tv1"/>
    <ImageView
            android:id="@+id/imv"
            android:layout_width="250dp" android:layout_height="250dp"
               android:width="50dp"
               android:height="50dp"
               android:src="@drawable/john"
               android:layout_below="@id/tv2" android:layout_centerHorizontal="true"
               android:layout_marginTop="7dp"
               android:contentDescription="@string/lead_developer_john_oye"/>

    <TextView android:id="@+id/tv3" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:text="@string/john_oye"
              android:textSize="35sp"
              android:textColor="@color/black"
              android:fontFamily="@font/mp_boldextra" android:layout_below="@id/imv"/>

</RelativeLayout>